<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/logcat" />
        <item
            android:id="@+id/nav_bug_report"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/send_bug_report" />
        <item
            android:id="@+id/nav_arduino"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/arduino_guide" />
        <item
            android:id="@+id/nav_troubleshoot"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/troubleshooting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/about_app" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_developer_board_black_24dp"
                android:title="@string/developer_label" />
        </menu>
    </item>

</menu>
