<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/old_app_background"
    tools:context="com.developers.paras.droidwatch.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_feature_coming_soon"
        android:textColor="@color/primary_light"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:id="@+id/noti"
        android:textColor="@color/primary_light"
        android:layout_marginEnd="20dp"
        android:text="@string/enable_notifications"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/secondary_text"
        android:layout_marginEnd="60dp"
        android:text="@string/notification"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibrations_label"
        android:textSize="18sp"
        android:id="@+id/vib"
        android:textColor="@color/primary_light"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/secondary_text"
        android:layout_marginEnd="60dp"
        android:text="@string/vibrations"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_sync_label"
        android:textSize="18sp"
        android:id="@+id/time"
        android:textColor="@color/primary_light"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25sp"
        android:textColor="@color/secondary_text"
        android:layout_marginEnd="60dp"
        android:text="@string/time_sync"/>
</LinearLayout>