<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:background="@drawable/old_app_background"
    tools:context="com.developers.paras.droidwatch.DeviceHomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/device_label_device_home"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/device_name"
            android:textColor="@color/primary_light"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/device_help_label_device_home"
            android:textSize="20sp"
            android:textColor="@color/primary_light"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:textColor="@color/primary_light"
            android:layout_weight="1"
            android:id="@+id/device_status"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/status_label_device_home"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/status_help_label_device_home"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:id="@+id/connect_guide"
            android:textColor="@color/primary_light"
            android:layout_marginStart="10dp"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/primary_light"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/device_data"
            android:layout_marginStart="10dp"
            android:text="@string/data_label_device_home"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/data_help_label_device_home"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/primary_light"
            android:layout_marginStart="10dp"
            android:layout_weight="1.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <Button
                android:layout_gravity="top"
                android:text="@string/reconnect_button_label"
                android:textSize="20sp"
                android:textColor="@color/primary_light"
                android:background="@drawable/button"
                android:id="@+id/reconnect"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_gravity="bottom"
                android:text="@string/disconnect_button_label"
                android:textSize="20sp"

                android:textColor="@color/primary_light"
                android:background="@drawable/button"
                android:id="@+id/disconnect"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
